0.00004        2009-09-03
        - correct option name typo in the docs (digest_class -> encode_class)
        - put the .gpg files back into the test so tests pass (mst == fool)
0.00003        2009-09-01
        - fixup copyright and licensing info to the proposed new best
          practice for /^DBIx::Class/ modules
        - close dbh before unlinking so tests pass on win32

0.00002        2008-07-27
        - Support for Crypt::OpenPGP

0.00001        2008-02-01
        - No changes

0.00001_03     2008-01-31
        - Pod Changes and corrections
        - Added common digest lengths table

0.00001_02     2008-01-31
        -salt additions & little fixes

0.00001_01     2008-01-29
	- Initial release